# Music_Downloader

./: .gitignore  README.md  TODO.md  main.py  pyproject.toml  requirements.txt  ruff.toml
downloader/: core.py
interface/: communication.py
schemas/: video_data.py  video_model.py
ui/: MusicPage.qml  PlaylistPage.qml  Toast.qml  main.qml
