[project]
name = "music-downloader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "gustavoprocopio27", email = "gustavoprocopio727@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pyside6>=6.10.2",
    "pytubefix>=10.3.8",
    "spotdl>=4.4.3",
]



[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
